--- a/views/css/landing_page_style.css
+++ b/views/css/landing_page_style.css
@@ -5,6 +5,26 @@ body {
     align-items: center;
     height: 100vh;
 }
+
+.nav-links {
+    width: 100%;
+    background-color: #f5f5f5;
+    padding: 15px 0;
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+}
+
+.nav-links a {
+    margin: 0 15px;
+    text-decoration: none;
+    color: #262c9c;
+    font-weight: bold;
+}
+
+.nav-links a:hover {
+    background-color: rgb(197, 197, 197);
+}
+
 .page-wrapper {
     display: flex;
     flex-direction: column;
