--- a/views/landing_page.ejs
+++ b/views/landing_page.ejs
@@ -2,95 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/landing_page_style.css">
     <title>Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        
-        .nav-links {
-            width: 100%;
-            background-color: #f5f5f5;
-            padding: 15px 0;
-            text-align: center;
-            border-bottom: 1px solid #ccc;
-        }
-
-        .nav-links a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #262c9c;
-            font-weight: bold;
-        }
-
-        .nav-links a:hover {
-            background-color: rgb(197, 197, 197);
-        }
-
-        .page-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .login-container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            border: 2px solid black; /* Black border with a thickness of 2px */
-        }
-
-        input {
-            width: 95%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .order-container{
-            width: 100%;
-            max-width: 600px;
-        }
-
-        .button-login {
-            width: 100%;
-            padding: 10px 0;
-            background-color: #4CAF50;
-            color: white;
-            font-size: 16px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            margin-top: 10px;
-            transition: background-color 0.3s ease;
-        }
-
-        .button-login:hover {
-            background-color: #357c39;
-        }
-
-        .button-order {
-            width: 100%;
-            padding: 10px 0;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .button-order:hover {
-            background-color: #0056b3;
-        }
-    </style>
 </head>
 <body>
     <div class="page-wrapper">
