--- a/views/customer_order_page.ejs
+++ b/views/customer_order_page.ejs
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="/css/customer_style.css">
 </head>
 <body>
+    <div class="banner">
+        <h1>Customer Order Page</h1>
+        <button class="home-button" onclick="goToLogin()">Home</button>
+    </div>
     <div class="main-wrapper">
         <div class="content">
-            <h1>Customer Order Page</h1>
-            <h1><a href="/">This is a link to home page</a></h1>
-
             <div class="grid-container">
                 <% teas.forEach(tea => { %>
                     <div class="container">
