--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -27,15 +27,38 @@
             <input type="date" id="end" value="2018-07-22" min="2016-01-01" max="2030-12-31" />
             <button>Graph</button>
             
+            <!--When dynamically counting addons, use the addon column names and use a for loop for dynamics-->
+
             <canvas id="myChart"></canvas>
         </div>
 
         <div class="z-report">
             <h1>Z-Report</h1>
+            <button>Display Z-Report</button>
+            <!--
+            <table cellspacing=0 border=1>
+                <tr>
+                    <th>name</th>
+                    <th>amount</th>
+                </tr>
+                <% for (var i in menu_items) {%>
+                    <tr>
+                        <td><%=menu_items[i].name%></td>
+                        <td></td>
+                    </tr>
+                <% } %>
+                <% for (var i in flavors) {%>
+                    <tr>
+                        <td><%=flavors[i].name%></td>
+                        <td></td>
+                    </tr>
+                <% } %>
+            </table>
+            -->
         </div>
 
         <div class="x-report">
-            <h1>X-Report</h1>
+            <h1>X-Report for today</h1>
         </div>
     </div>
     
