linked get requests with buttons for reports

--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -6,6 +6,7 @@
     <title>Reports Page</title>
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/js/manager_logic.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
             <h1>Graph</h1>
             <input type="date" id="start" value="2018-07-22" min="2016-01-01" max="2030-12-31" />
             <input type="date" id="end" value="2018-07-22" min="2016-01-01" max="2030-12-31" />
-            <button>Graph</button>
+            <button onclick="display_graph()">Graph</button>
             
             <!--When dynamically counting addons, use the addon column names and use a for loop for dynamics-->
 
@@ -34,7 +35,7 @@
 
         <div class="z-report">
             <h1>Z-Report</h1>
-            <button>Display Z-Report</button>
+            <button onclick="display_z_report()">Display Z-Report</button>
             <!--
             <table cellspacing=0 border=1>
                 <tr>
@@ -59,6 +60,7 @@
 
         <div class="x-report">
             <h1>X-Report for today</h1>
+            <button onclick="display_x_report()">Display X-Report</button>
         </div>
     </div>
     
