--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -34,14 +34,14 @@
         </div>
 
         <div class="z-report">
-            <h1>Z-Report</h1>
+            <h1 id="report-header">Z-Report</h1>
             <button onclick="display_z_report()">Display Z-Report</button>
             
-            <table cellspacing=0 border=1>
-                <tr>
-                    <th>name</th>
-                    <th>amount</th>
-                </tr>
+            <table id="sales-table" cellspacing=0 border=1>
+                
+            </table>
+
+            <table id="amount-sold-table" cellspacing=0 border=1>
                 
             </table>
         </div>
